@@ -1,3 +1,10 @@
+2015-05-11  Titus Brown  <titus@idyll.org>
+
+   * scripts/sample-reads-randomly.py: fixed boundary error in
+   sample-reads-randomly.py.
+   * tests/test_scripts.py: updated tests to correspond with correct
+   behavior of sample-reads-randomly.py.
+
 2015-04-23  Lex Nederbragt  <lex.nederbragt@ibv.uio.no>
 
    * tests/test_scripts.py: added a test for extract-partitions:
